# M3T

./: .Rbuildignore  .gitignore  DESCRIPTION  Inventory_lit_review.docx  LICENSE.md  NAMESPACE  PYTHON_PORT_PLAN.md  README.Rmd  README.html  README.md  R_BUGS_FOUND.md  To-do-list.docx  environment.yaml
python/: .gitignore  README.md  environment-py.yaml  pyproject.toml
python/.github/workflows/: python-ci.yaml
python/_data_raw/: README.md  build_data.py  export_rda_reference.R  scrapers.py
python/_data_raw/ghgi_lists/: GHGI_NG_distribution.json  GHGI_NG_transmission.json  GHGI_stationary_combustion.json  Neighboring_states.json
python/notebooks/: nyc_demo.ipynb  nyc_demo.py
python/src/m3t/: __init__.py  combine.py  config.py  context.py  datasets.py  disaggregation.py  domain.py  download.py  geo.py  inventory.py  plotting.py  shared_data.py  validation.py
python/src/m3t/data/: CWNS_2012.parquet  CWNS_2022.parquet  Census_state_population_M3T.parquet  EIA_NG_data.parquet  (+16 more)
python/tests/: test_combine.py  test_config.py  test_datasets.py  test_domain_oracle.py  test_geo.py  test_geo_oracle.py  test_gepa_fine.py  test_gepa_golden.py  test_inventory.py  test_landfills_golden.py  test_mass_conservation.py  test_ng_distribution_golden.py  test_ng_transmission_golden.py  test_plotting.py  test_scrapers.py  test_sector_output_contract.py  test_stationary_combustion_golden.py  test_validation.py  test_wastewater_golden.py  test_wetlands_golden.py
python/tests/golden/: README.md  capture_combine_oracle.R  capture_domain_oracle.R  capture_geo_oracle.R  capture_gepa_oracle.R  capture_landfills_oracle.R  capture_ng_distribution_oracle.R  capture_ng_transmission_oracle.R  capture_stationary_combustion_oracle.R  capture_wastewater_oracle.R  capture_wetlands_oracle.R  domain_oracle.json  geo_oracle.json  make_aces_fixtures.py  rda_reference.json
(+237 files in other folders)
