[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m3t"
version = "0.0.1.dev0"
description = "Modular Methane Mapping Tool (M3T) — gridded urban methane inventories (Python port of the M3T R package)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "CC-BY-NC-4.0" }
authors = [
    { name = "Kristian Hajny", email = "kris.hajny@gmail.com" },
]
keywords = ["methane", "emissions", "inventory", "geospatial", "greenhouse-gas"]

# Geospatial deps (rioxarray/rasterio/geopandas) pull GDAL/PROJ/GEOS; a conda
# environment is strongly recommended over pip wheels. See environment-py.yaml.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "xarray>=2023.1",
    "rioxarray>=0.15",
    "rasterio>=1.3",
    "geopandas>=0.14",
    "shapely>=2.0",
    "pyproj>=3.5",
    "rasterstats>=0.19",
    "netCDF4>=1.6",
    "openpyxl>=3.1",
    "requests>=2.31",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
]

[project.optional-dependencies]
dev = [
    "jupytext>=1.16",       # notebooks/nyc_demo.py <-> .ipynb
    "nbconvert>=7",
    "ipykernel>=6",
    "matplotlib>=3.8",
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.5",
]

[project.urls]
Homepage = "https://github.com/Kristian-hajny/M3T"
"Bug Reports" = "https://github.com/Kristian-hajny/M3T/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"m3t.data" = ["*.parquet", "*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require internet access (deselect with '-m \"not network\"')",
    "golden: tests that compare against reference outputs captured from the R package",
]

[tool.ruff]
line-length = 100
target-version = "py311"
